# agentic-sre

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  local-llm-selection.md  loop-engineering.md  safety.md
evals/: __init__.py  runner.py  scoring.py
evals/cases/: eval_001_wrong_image_tag.yaml  eval_002_bad_readiness_probe.yaml  eval_003_service_selector_mismatch.yaml  eval_004_bad_deploy.yaml  eval_005_overloaded.yaml  eval_006_dependency_down.yaml  eval_007_over_provisioned.yaml  eval_008_needs_hpa.yaml
lab/alerts/: bad-deploy.json  dependency-down.json  high-latency.json  pods-degraded.json
lab/manifests/base/: deployment.yaml  kustomization.yaml  service.yaml
lab/manifests/depsvc/: configmap-code.yaml  configmap-config.yaml  deployment.yaml  kustomization.yaml  service.yaml
scripts/: _lab_common.sh  inject_bug.sh  inspect_mac.sh  reset_lab.sh  run_lab.sh  setup_minikube.sh  setup_ollama.sh
specs/: 000-product-vision.md  001-local-runtime-requirements.md  002-agent-architecture.md  003-loop-engineering-design.md  004-minikube-lab-design.md  005-tool-contracts.md  006-evaluation-strategy.md  007-safety-and-permissions.md  008-observability.md  009-roadmap.md  010-oncall-incident-response.md  011-efficiency-capacity-cost.md
src/sre_agent/: __init__.py  config.py  cost.py  graph.py  loop.py  main.py  observability.py  oncall.py  optimize.py  reports.py  state.py
tests/: test_memory.py  test_oncall.py  test_optimize.py  test_regression_guard.py  test_safety_and_plan.py  test_scoring.py
(+28 files in other folders)
